--- a/firebase.json
+++ b/firebase.json
@@ -1,19 +1,11 @@
 {
   "hosting": {
-    "public": "pulic",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-
-    "cleanUrls": true,
-
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
-  }
+  },
+  "cleanUrls": true
 }
