--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,15 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+
+    "cleanUrls": true,
+
+    "rewrites": [
+      {
+        "source": "/app/**",
+        "destination": "/index.html"
+      }
     ]
-  },
-  "cleanUrls": true
+  }
 }
